@@ -3,6 +3,7 @@
     * 0452 Speedup generation of configuration...
     * 0451 FIX: Ignore missing check types when creating configuration for Nagios
     * 0259 FIX: Fixed htpasswd permission problem in check_mk standalone installation...
+    * 0453 FIX: Fix ugly Python exception in host diagnosis page in case of SNMP error...
 
     Checks & Agents:
     * 0258 FIX: ps: fixed calculation of virtual/resident memory from windows agents...
